--- a/introducing-finbif/index.html
+++ b/introducing-finbif/index.html
@@ -12,7 +12,7 @@ install.packages(&#34;finbif&#34;) You can also install the latest development v
   <link rel="stylesheet" href="https://luomus.github.io/finbif-blog/css/bootstrap.min.css">
   
   
-  <title>Introducing the finbif R package | Vanilla</title>
+  <title>Introducing the finbif R package | FinBIF blog</title>
   <style>
 .container {
   max-width: 700px;
