--- a/introducing-finbif/index.html
+++ b/introducing-finbif/index.html
@@ -322,7 +322,7 @@ with(
 <div id='discourse-comments'></div>
 <script type="text/javascript">
   DiscourseEmbed = { discourseUrl: 'https://foorumi.laji.fi/',
-                     discourseEmbedUrl: 'https://luomus.github.io/finbif-blog/\/finbif-blog\/introducing-finbif\/' };
+                     discourseEmbedUrl: 'https://luomus.github.io\/finbif-blog\/introducing-finbif\/' };
 
   (function() {
     var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
