deploy: ac1efa489c3f83b1b8aea210d912d5005ae72d6b

--- a/introducing-finbif/index.html
+++ b/introducing-finbif/index.html
@@ -319,7 +319,7 @@ with(
     </div>
     
 
-<div id='discourse-comments'></div>
+<div id='discourse-comments' class='container'></div>
 <script type="text/javascript">
   DiscourseEmbed = { discourseUrl: 'https://foorumi.laji.fi/',
                      discourseEmbedUrl: 'https://luomus.github.io\/finbif-blog\/introducing-finbif\/' };
